works in git-bash with ssh-agent. Changes made to ssh-agent-client-rs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,9 @@
         "keygen",
         "Nazdravlje",
         "passcode",
+        "PGID",
         "plantuml",
+        "PPID",
         "Prost",
         "reqwest",
         "rustc",
@@ -40,10 +42,13 @@
         "rustlang",
         "rustprojects",
         "serde",
+        "sscanf",
+        "STIME",
         "struct",
         "subsecond",
         "substack",
         "thiserror",
+        "WINPID",
         "zcvf",
         "zdravje",
         "zeroize"
