forked ssh-agent-client-rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "treasure"
-version = "0.0.41"
+version = "0.0.42"
 description = "Use SSH private key to store your passwords locally and make them strong"
 authors = ["bestia.dev"]
 homepage = "https://bestia.dev"
@@ -30,8 +30,8 @@ serde ={ version= "1.0.217", features=["std","derive"]}
 serde_json = "1.0.140"
 
 ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
-# ssh-agent-client-rs = "0.9.1"
-ssh-agent-client-rs = {path = "../ssh-agent-client-rs"}
+# I forked this crate to add implementation for 'windows git-bash'
+ssh-agent-client-rs = {git = "https://github.com/bestia-dev/ssh-agent-client-rs.git"}
 rsa = { version = "0.9.7", features = ["sha2","pem"] }
 zeroize = {version="1.8.1", features=["derive"]}
 aes-gcm = "0.10.3"
