--- a/automation_tasks_rs/.vscode/settings.json
+++ b/automation_tasks_rs/.vscode/settings.json
@@ -24,9 +24,11 @@
         "bestia",
         "bestiadev",
         "camino",
+        "chrono",
         "CRUSTDE",
         "decryptor",
         "encryptor",
+        "ende",
         "endregion",
         "keygen",
         "Nazdravlje",
