package name and binary name should be the same. Makes everything easier.

--- a/automation_tasks_rs/.vscode/settings.json
+++ b/automation_tasks_rs/.vscode/settings.json
@@ -25,6 +25,7 @@
         "bestiadev",
         "camino",
         "chrono",
+        "commitish",
         "CRUSTDE",
         "decryptor",
         "encryptor",
