--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "bestia",
         "bestiadev",
         "camino",
+        "commitish",
         "CRUSTDE",
         "Decryptor",
         "Encryptor",
