--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "treasure"
-version = "0.0.43"
+name = "treasure_your_passwords"
+version = "0.0.50"
 description = "Use SSH private key to store your passwords locally and make them strong"
 authors = ["bestia.dev"]
 homepage = "https://bestia.dev"
@@ -26,7 +26,7 @@ pretty_env_logger="0.5.0"
 thiserror = "2.0.12"
 anyhow="1.0.97"
 reqwest={version="0.12.12", features=["json","blocking"]}
-serde ={ version= "1.0.217", features=["std","derive"]}
+serde ={ version= "1.0.219", features=["std","derive"]}
 serde_json = "1.0.140"
 
 ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
