github app permission

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "bestia",
         "bestiadev",
         "camino",
+        "chrono",
         "commitish",
         "CRUSTDE",
         "Decryptor",
@@ -31,6 +32,7 @@
         "ende",
         "endregion",
         "keygen",
+        "lizs",
         "Nazdravlje",
         "passcode",
         "PGID",
