--- a/automation_tasks_rs/.vscode/settings.json
+++ b/automation_tasks_rs/.vscode/settings.json
@@ -32,6 +32,7 @@
         "ende",
         "endregion",
         "keygen",
+        "lizs",
         "Nazdravlje",
         "new_cli",
         "octocrab",
