--- a/automation_tasks_rs/Cargo.toml
+++ b/automation_tasks_rs/Cargo.toml
@@ -32,7 +32,7 @@ camino = "1.1.9"
 base64ct = {version = "1.6.0", features = ["alloc"] }
 inquire = "0.7.5"
 secrecy = "0.10.3"
-chrono ={version="0.4.40", default-feature=false, features=["now"]}
+chrono ={version="0.4.40", default-features=false, features=["now"]}
 tokio-util = {version = "0.7.13", features = ["codec"]}
 tokio = {version = "1.44.0", features = ["rt","rt-multi-thread","fs"]}
 url="2.5.4"
