--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "rustprojects",
         "serde",
         "sscanf",
+        "sshadd",
         "STIME",
         "struct",
         "subsecond",
