cargo_auto_lib = 3.0.4

--- a/.github/workflows/rust_fmt_auto_build_test.yml
+++ b/.github/workflows/rust_fmt_auto_build_test.yml
@@ -49,4 +49,6 @@ jobs:
 
     - name: cargo auto test
       run: cargo auto test
-      
+
+    - name: cargo clippy --no-deps
+      run: cargo clippy --no-deps
