--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "bestiadev",
         "camino",
         "chrono",
+        "clippy",
         "commitish",
         "CRUSTDE",
         "Decryptor",
@@ -44,6 +45,7 @@
         "rustdevuser",
         "rustlang",
         "rustprojects",
+        "sccache",
         "serde",
         "sscanf",
         "sshadd",
@@ -51,6 +53,7 @@
         "struct",
         "subsecond",
         "substack",
+        "Swatinem",
         "thiserror",
         "WINPID",
         "zcvf",
