--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/bestia-dev/treasure_your_passwords"
 # Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
-keywords = ["maintained", "work-in-progress", "rustlang"]
+keywords = ["maintained", "ready-for-use", "rustlang"]
 categories = ["command-line-interface"]
 # publish as a cargo tool. Only this files.
 publish = false
