--- a/.github/workflows/win_rust_fmt_auto_build_test.yml
+++ b/.github/workflows/win_rust_fmt_auto_build_test.yml
@@ -1,4 +1,4 @@
-name: rust_fmt_auto_build_test
+name: win_rust_fmt_auto_build_test
 
 on:
   push:
@@ -12,7 +12,7 @@ env:
 jobs:
   rust_fmt_auto_build_test:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: checkout
