--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "endregion",
         "keygen",
         "lizs",
+        "msys",
         "Nazdravlje",
         "passcode",
         "PGID",
