compatible win-git-bash

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "commitish",
         "CRUSTDE",
         "Decryptor",
+        "dlltool",
         "Encryptor",
         "ende",
         "endregion",
