--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "treasure_your_passwords"
-version = "0.0.55"
+version = "0.0.56"
 description = "Use SSH private key to store your passwords locally and make them strong"
 authors = ["bestia.dev"]
 homepage = "https://bestia.dev"
@@ -29,15 +29,16 @@ log = "0.4.26"
 pretty_env_logger="0.5.0"
 thiserror = "2.0.12"
 anyhow="1.0.97"
-reqwest={version="0.12.12", features=["json","blocking"]}
+# the last version of reqwest that builds in win-git-bah is 0.12.12
+reqwest={version="=0.12.12", features=["json","blocking"]}
 serde ={ version= "1.0.219", features=["std","derive"]}
 serde_json = "1.0.140"
 ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
 
 # I forked this crate to add implementation for 'windows git-bash'
-ssh-agent-client-rs = {git = "https://github.com/bestia-dev/ssh-agent-client-rs-win-git-bash.git", branch="win_git_bash"}
-
-rsa = { version = "0.9.7", features = ["sha2","pem"] }
+# ssh-agent-client-rs = {git = "https://github.com/bestia-dev/ssh-agent-client-rs-win-git-bash.git", branch="no_sscanf_regex"}
+ssh-agent-client-rs = {path="../ssh-agent-client-rs-win-git-bash"}
+rsa = { version = "0.9.8", features = ["sha2"] }
 zeroize = {version="1.8.1", features=["derive"]}
 aes-gcm = "0.10.3"
 camino = "1.1.9"
