--- a/.github/workflows/win_rust_fmt_auto_build_test.yml
+++ b/.github/workflows/win_rust_fmt_auto_build_test.yml
@@ -42,9 +42,9 @@ jobs:
       uses: actions/cache@v4.2.2
       with:
         path: |
-          /home/runner/work/cargo-auto/cargo-auto/automation_tasks_rs/.file_hashes.json 
-          /home/runner/work/cargo-auto/cargo-auto/automation_tasks_rs/target 
-          /home/runner/work/cargo-auto/cargo-auto/automation_tasks_rs/Cargo.toml
+          automation_tasks_rs/.file_hashes.json 
+          automation_tasks_rs/target 
+          automation_tasks_rs/Cargo.toml
         key: automation_tasks_rs
 
     - name: cargo auto build
