--- a/automation_tasks_rs/.vscode/settings.json
+++ b/automation_tasks_rs/.vscode/settings.json
@@ -26,6 +26,7 @@
         "camino",
         "chrono",
         "commitish",
+        "creds",
         "CRUSTDE",
         "decryptor",
         "encryptor",
@@ -41,6 +42,7 @@
         "Prost",
         "reqwest",
         "rustdevuser",
+        "rustlang",
         "rustprojects",
         "serde",
         "sshadd",
