--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "chrono",
         "clippy",
         "commitish",
+        "crossplatform",
         "CRUSTDE",
         "Decryptor",
         "dlltool",
