--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,8 +38,10 @@
         "Encryptor",
         "ende",
         "endregion",
+        "filetime",
         "keygen",
         "lizs",
+        "microxml",
         "msys",
         "Nazdravlje",
         "passcode",
@@ -62,6 +64,7 @@
         "substack",
         "Swatinem",
         "thiserror",
+        "urlencoding",
         "WINPID",
         "zcvf",
         "zdravje",
