--- a/automation_tasks_rs/.vscode/settings.json
+++ b/automation_tasks_rs/.vscode/settings.json
@@ -27,21 +27,31 @@
         "appender",
         "bestia",
         "bestiadev",
+        "camino",
         "chrono",
         "commitish",
         "creds",
         "crossplatform",
         "CRUSTDE",
+        "Datelike",
         "decryptor",
+        "dodrio",
         "encryptor",
         "ende",
         "endregion",
+        "enduml",
+        "filehash",
+        "filetime",
+        "HEXLOWER",
         "keygen",
         "lizs",
+        "microxml",
+        "mmdd",
         "Nazdravlje",
         "new_cli",
         "octocrab",
         "passcode",
+        "pathbuff",
         "plantuml",
         "Prost",
         "reqwest",
@@ -50,10 +60,14 @@
         "rustprojects",
         "serde",
         "sshadd",
+        "startuml",
         "struct",
         "subsecond",
         "substack",
         "thiserror",
+        "Timelike",
+        "Unpadded",
+        "urlencoding",
         "zcvf",
         "zdravje",
         "zeroize"
